added function to find and replace bork

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<p id="addBork">Super chub mlem doing me a frighten vvv very jealous pupper adorable doggo snoot, very taste wow I am bekom fat heckin fluffer snoot. clouds long bois. Heckin angery woofer dat tungg tho wrinkler heckin good boys, wrinkler. Length boy what a nice floof corgo, pats. Such treat wrinkler bork shoober adorable doggo pupperino, mlem porgo noodle horse very good spot. Snoot heckin good boys and girls stop it fren big ol pupper fat boi heckin, borkf borking doggo heck you are doing me the shock, big ol blop smol long woofer. Blop long woofer doggorino aqua doggo very jealous pupper, thicc .</p>
 		<button type="button" onclick="textColor();">Change Text Color</button>
 		<button type="button" onclick="changeFont();">Change Font</button>
+		<button type="button" onclick="replaceBork();">MORE BORKS</button>
 		<button type="button" onclick="newBork();">BORK</button>
 	</body>
 </html>
